@@ -105,30 +105,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <propertyName>jaCoCoArgLine</propertyName>
-                        </configuration>
-                    </execution>
-                    <!-- attached to Maven test phase -->
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
@@ -146,7 +122,8 @@
                         --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.raw=ALL-UNNAMED
                         --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.uring=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.misc=org.reactivetoolbox.io.async,ALL-UNNAMED
-                        ${jaCoCoArgLine}
+
+                        --add-exports java.base/jdk.internal.misc=org.reactivetoolbox.io.async
                         ${java.enable-preview}
                         -Xmx1024m
                     </argLine>
@@ -169,7 +146,6 @@
                 <configuration>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
-<!--                    <release>${java.release}</release>-->
                     <source>14</source>
                     <target>14</target>
                     <compilerArgs>
